src/assets/css/styles.less
// out: false

// Attributes & functions

@import 'global/const.less';
@import 'global/functions.less';
@import 'global/animations.less';

// Global

html, body {
  margin: 0;
  font-family: 'Montserrat', sans-serif;
}
.noscroll {
  overflow: hidden !important;
}

.list-container {
  display: flex;
  flex-direction: row;
  justify-content: center;

  .right-button {
    position: fixed;
    width: 40px;
    height: 40px;
    right: 30px;
    background-color: transparent;
    border: 2px solid #A0A0A0;
    border-radius: 25px;
    color: #A0A0A0;
    font-size: 20px;
    opacity: 0.5;
    cursor: pointer;
    outline: none;
    .transition();
  }
  .right-button:hover {
    opacity: 1;
  }
  .info-button {
    bottom: 30px;
  }
  .info-button.upper {
    bottom: 80px;
  }
  .scroll-top-button {
    bottom: 30px;
  }
  .scroll-top-button.hidden {
    bottom: -50px;
  }

  app-events-list {
    position: relative;
    width: 350px;
    height: 100vh;

    .list-container {
      position: fixed;
      max-width: 300px;
      top: calc(100vh * 0.2);
      display: flex;
      flex-direction: column;
      padding: 25px;

      ul {
        list-style-type: none;
        margin: 0;
        padding: 0;
        text-align: right;
        z-index: 100;
  
        li {
          .category-name,
          .event-name {
            padding: 7px 10px 7px 15px;
            font-size: 18px;
          }
          .category-name {
            color: #A0A0A0;
            padding-right: 50px;
          }
          .event-name {
            display: inline-flex;
            flex-direction: row;
            justify-content: flex-end;
            align-items: center;
            background-color: transparent;
            border-radius: 30px;
            cursor: pointer;
            .transition();
            
            .event-name-text {
              color: #202020;
              line-height: 25px;
              .transition();
            }
            .event-name-cursor {
              margin-left: 30px;
              display: inline-block;
              width: 11px;
              min-width: 11px;
              height: 11px;
              background-color: white;
              border: 2px solid #A0A0A0;
              border-radius: 10px;
              .transition();
            }
          }
          .event-name:not(.active):hover {
            .event-name-text {
              color: @highlight-color;
              transform: scale(1.1);
            }
            .event-name-cursor {
              border-color: @highlight-color;
            }
          }
          .event-name.active {
            background-color: @selected-background-color;

            .event-date {
              display: inline;
            }
            .event-name-text {
              color: @selected-color;
            }
            .event-name-cursor {
              background-color: @selected-color;
              border-color: @selected-color;
            }
          }
        }
      }
  
      .line {
        position: absolute;
        width: 0;
        height: calc(100% - 120px);
        top: 80px;
        right: 42px;
        border-left: 1px solid #A0A0A0;
        z-index: 10;
      }
    }
  }
  .events {
    app-event {
      display: flex;
      flex-direction: row;
      width: 850px;
      min-height: 600px;
      padding: 50px 0;

      .event-container {
        width: 600px;
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        .transition(@slow-time);

        img:first-child {
          width: 100%;
          margin-bottom: 5px;
        }
        img {
          cursor: pointer;
        }

        .event-plus-button {
          width: 40px;
          height: 165px;
          display: flex;
          justify-content: center;
          align-items: center;
          background-size: cover;
          background-position: center;
          color: white;
          font-size: 25px;
          cursor: pointer;
          opacity: 0.5;
        }
        .event-plus-button:hover {
          opacity: 0.7;
        }
      }

      .event-info {
        padding-left: 20px;
        max-width: 230px;
        .transition(@slow-time);

        .event-name {
          color: #606060;
          font-size: 18px;
        }
        .event-date {
          color: #606060;
          font-size: 14px;
        }
      }

      .event-container:not(.visible),
      .event-info:not(.visible) {
        opacity: 0;
      }
    }   
  }
}

app-lightbox {
  .lightbox-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: black;
    z-index: 10000;

    .lightbox-images {
      width: 100%;
      height: 100%;

      .lightbox-image {
        position: absolute;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        background-position: center;
        background-repeat: no-repeat;
        background-size: contain;
        .transition(@lightbox-animation-time);
      }
      .lightbox-image.active {
        left: 0;
        opacity: 1;
      }
      .lightbox-image.left-hidden {
        left: -100%;
        opacity: 0;
      }
      .lightbox-image.right-hidden {
        left: 100%;
        opacity: 0;
      }
    }

    .close-button {
      position: absolute;
      top: 20px;
      right: 20px;
      padding: 0;
      background-color: transparent;
      border: none;
      color: white;
      font-size: 25px;
      font-weight: 600;
      cursor: pointer;
      opacity: 0.5;
      outline: none;
      .transition();
    }
    .close-button:hover {
      opacity: 1;
    }
  }
  .lightbox-container.hidden {
    display: none;
  }
}

.info-overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.9);
  z-index: 10000;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  .close-button {
    position: absolute;
    top: 20px;
    right: 20px;
    padding: 0;
    background-color: transparent;
    border: none;
    color: #606060;
    font-size: 25px;
    font-weight: 600;
    cursor: pointer;
    opacity: 0.5;
    outline: none;
    .transition();
  }
  .close-button:hover {
    opacity: 1;
  }

  .info-section {
    width: 100%;
    margin: 15px 0;
    display: flex;
    flex-direction: row;

    .info-illustration {
      width: 40%;
      display: flex;
      justify-content: flex-end;

      .key {
        width: 35px;
        height: 35px;
        margin: 5px;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 5px;
        border: 1px solid #606060;
        border-right-width: 3px;
        border-bottom-width: 3px;
        color: #606060;
      }
      .key.adaptive-key {
        width: auto;
        padding: 0 10px;
      }
    }
    .info-explaination {
      width: 60%;
      padding: 0 30px;
      display: flex;
      justify-content: flex-start;
      align-items: center;
    }
  }
}
.info-overlay.hidden {
  display: none;
}

@media (max-width: 1249px) {
  .list-container {
    .events {
      app-event {
        flex-direction: column;
        flex-flow: column-reverse;
        width: 650px;
        min-height: unset;

        .event-info {
          width: 600px;
          max-width: unset;
          padding: 0 0 10px;
          display: flex;
          flex-direction: row;
          justify-content: space-between;
          align-items: center;
        }
      }
    }
  }
}

@media (max-width: 1023px) {
  .list-container {
    .scroll-top-button {
      display: none;
    }
    app-events-list {
      display: none;
    }
    .events app-event {
      width: 600px;
    }
  }
}

@media (max-width: 767px) {
  .list-container .events app-event {
    width: 90vw;
    padding: 7vw 0;

    .event-container,
    .event-info {
      width: auto;
    }
    .event-info {
      flex-direction: column;
      align-items: flex-start;
    }
  }
}

